--- a/styles/index.css
+++ b/styles/index.css
@@ -31,14 +31,21 @@
   }
 }
 
+body {
+  scroll-behavior: smooth;
+  -webkit-scroll-behavior: auto !important;
+}
+
+html {
+  scroll-behavior: smooth;
+  -webkit-scroll-behavior: auto !important;
+}
+
 pagecard>img {
   max-height: 100%;
   height: 100%;
 }
 
-html {
-  scroll-behavior: smooth;
-}
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
