--- a/styles/index.css
+++ b/styles/index.css
@@ -73,7 +73,6 @@ input[type=number] {
   transition: all 0.2s;
   display: block;
   width: 100%;
-  height: auto;
   transform: scale(1);
   border-radius: 0.375rem 0.375rem 0rem 0rem;
 }
@@ -259,9 +258,23 @@ input[type=number] {
 
 #scroll-to-top {
   position: fixed;
-  bottom: 0;
-  right: 0;
+  bottom: 20px;
+  right: 20px;
   z-index: 500;
+  width: 40px;
+  height: 40px;
+  color: white;
+  fill: currentColor;
+  background-color: #22c55e;
+  border-radius: 100%;
+  box-shadow: 0px 0px 5px 2px rgba(208, 208, 208, 0.12);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#scroll-to-top svg {
+  width: 20px;
 }
 
 .mission {
