--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,8 @@
 @import 'tailwindcss/components';
 /* @import './base.css'; */
 @import 'tailwindcss/utilities';
+/* @import url('https://fonts.googleapis.com/css?family=Open+Sans'); */
+@import url('https://fonts.cdnfonts.com/css/adobe-clean');
 
 @layer components {
 
@@ -34,6 +36,9 @@
 body {
   scroll-behavior: smooth;
   -webkit-scroll-behavior: auto !important;
+  /* font-family: "Open Sans", sans-serif; */
+  font-family: 'Adobe Clean', sans-serif;
+
 }
 
 html {
@@ -57,6 +62,11 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
+}
+
+.header-socials svg {
+  height: 1.25rem;
+  fill: currentColor;
 }
 
 .image-box {
