--- a/styles/training.css
+++ b/styles/training.css
@@ -41,7 +41,7 @@
 .training-card img {
     transform: scale(0.93);
     transition: all 0.2s;
-    height: auto;
+    height: 160px;
     margin: auto;
     width: auto;
 }
