--- a/styles/index.css
+++ b/styles/index.css
@@ -43,7 +43,7 @@ body {
   scroll-behavior: smooth;
   -webkit-scroll-behavior: auto !important;
   font-family: 'Adobe Clean', sans-serif;
-  color: rgb(49, 49, 49);
+  color: rgb(51, 51, 51);
 
 }
 
@@ -242,6 +242,7 @@ input[type=number] {
 }
 
 .admission-form-input {
+  background-color: white;
   appearance: none;
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
