--- a/styles/accordion.scss
+++ b/styles/accordion.scss
@@ -48,7 +48,7 @@ $border: #edebeb;
     transition: all 0.35s;
     border-top: 0.5px solid $border;
     border-bottom: 0.5px solid $border;
-    margin-bottom: -0.5px;
+    margin-top: -0.5px;
   }
   &-close {
     display: flex;
