--- a/styles/index.css
+++ b/styles/index.css
@@ -288,6 +288,7 @@ input[type=number] {
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor:"pointer"
 }
 
 #scroll-to-top svg {
