--- a/styles/index.css
+++ b/styles/index.css
@@ -340,3 +340,8 @@ input[type=number] {
   background-repeat: no-repeat;
   border-radius: 5px;
 }
+
+#course_overview ul{
+  padding:revert;
+  list-style-type: disc;
+}
