--- a/styles/index.css
+++ b/styles/index.css
@@ -379,3 +379,8 @@ input[type=number] {
   background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
 }
+
+.accordion-tab-content ul{
+  list-style-type: disc !important;
+  list-style-position: inside !important;
+}
