--- a/styles/index.css
+++ b/styles/index.css
@@ -380,7 +380,36 @@ input[type=number] {
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
 }
 
-.accordion-tab-content ul{
+.accordion-tab-content ul {
   list-style-type: disc !important;
   list-style-position: inside !important;
+}
+
+.testimonial-card-clamp-4 {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+/* For WebKit-based browsers */
+.testimonial-card-clamp-4::-webkit-scrollbar {
+  width: 2px;
+  /* set the width of the scrollbar */
+}
+
+/* For the track of the scrollbar */
+.testimonial-card-clamp-4::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+  /* set the background color of the track */
+}
+
+/* For the thumb of the scrollbar */
+.testimonial-card-clamp-4::-webkit-scrollbar-thumb {
+  background-color: #888;
+  /* set the background color of the thumb */
+  border-radius: 5px;
+  /* round the corners of the thumb */
 }
