--- a/styles/index.css
+++ b/styles/index.css
@@ -1,490 +1,137 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-/* @import './base.css'; */
-@import 'tailwindcss/utilities';
-/* @import url('https://fonts.googleapis.com/css?family=Open+Sans'); */
-@import url('https://fonts.cdnfonts.com/css/adobe-clean');
+@import url("./tailwind.css");
+@import url("./universal.css");
 
-@layer components {
-
-  /* .nav-button {
-    @apply border-t-white lg: border-t-4 hover:text-green-400 hover:border-t-green-400 duration-500 cursor-pointer;
-  } */
-
-  /* *{
-    background-color: rgba(255,0,0,0.05);
-  } */
-
-  .nav-button {
-    border-top: 4px;
-    border-top: 2px solid white;
-    transition-duration: .5s ease-in;
-    padding-top: 4px;
-  }
-
-  .nav-button.active {
-    color: #018544;
-    border-top: 2px solid #018544;
-  }
-
-  .nav-button:hover {
-    color: #018544;
-    border-top: 2px solid #018544;
-    cursor: pointer;
-  }
-
-  .footer-form-fields {
-    @apply bg-inherit border-2 border-gray-200 rounded-md h-9 w-full px-2;
-  }
-}
 
 html {
-  scroll-behavior: smooth;
-  -webkit-scroll-behavior: auto !important;
+    font-size: 16px;
 }
 
-:root{
-  --primary-color:#018544;
+.swoosh-h,
+.swoosh-h-secondary {
+    position: absolute;
+    z-index: -1;
+    bottom: -3px;
+    left: -3%;
+    content: "";
+    height: 14px;
+    width: 107%;
+    /* background-image: url("/assets/images/common/swoosh-primary.svg"); */
+    /* background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center; */
+    clip-path: polygon(0 0, 0% 100%, 100% 0);
+    /*but clip-path not support by all yet */
+    background-color: #018343;
 }
 
-body {
-  scroll-behavior: smooth;
-  -webkit-scroll-behavior: auto !important;
-  font-family: 'Adobe Clean', sans-serif;
-  color: rgb(51, 51, 51);
-
+.swoosh-h-secondary {
+    background-color: #E27C00;
 }
 
-pagecard>img {
-  max-height: 100%;
-  height: 100%;
-}
+/* TODO: swoosh should go behind the text  => seems like we cannot send element made using after like that ... make reusable component 
+    and absolute !after will work.
+*/
 
 
-/* Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-/* Firefox */
-input[type=number] {
-  -moz-appearance: textfield;
-}
-
-.header-socials svg {
-  height: 1rem;
-  fill: currentColor;
-}
-
-.footer-socials svg {
-  height: 1rem;
-  fill: currentColor;
-}
-
-.image-box {
-  overflow: hidden;
-  border-radius: 0.375rem 0.375rem 0rem 0rem;
-}
-
-.blog-container {
-  box-shadow: 0px 0px 10px 3px rgba(189, 189, 189, 0.35);
-}
-
-.image-box img {
-  max-width: 100%;
-  transition: all 0.2s;
-  display: block;
-  width: 100%;
-  transform: scale(1);
-  border-radius: 0.375rem 0.375rem 0rem 0rem;
-}
+.banner-b-white-curve::after {
+    position: absolute;
+    bottom: 0px;
+    content: "";
+    background-image: url("/assets/images/common/banner-b-white-curve.svg");
+    background-image: url("/assets/images/common/chirag.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 192px;
+    width: 100%;
+    c-clip-path: polygon(25% 100%, 76% 100%, 88% 94%, 100% 74%, 100% 100%, 0 100%, 0 80%, 9% 91%);
+    c-clip-path: polygon(48% 100%, 57% 100%, 87% 87%, 100% 65%, 100% 100%, 0 100%, 0 72%, 14% 85%);
+    c-clip-path: polygon(100% 100%, 44.7% 100%, 0% 100%, 0% 0%, 100% 0%, 100% 99.5%);
+    c-clip-path: polygon(100% 0, 44.74% 0, 0 100%, 100% 100%);
+    /* Adjust the coordinates accordingly */
+    c-clip-path: ellipse(100% 99.6% at 50% 100%);
+    c-background-color: teal;
+    display: none;
 
 
-.image-box:hover img {
-  transform: scale(1.05);
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.507);
-  backdrop-filter: blur(2px);
-  display: grid;
-  place-items: center;
-  z-index: 1000;
-}
-
-.swiper-slide {
-
-  display: flex;
-  justify-items: center;
-  align-items: center;
-}
-
-.contact-us-font {
-  font-size: 16px;
-}
-
-/* Footer CSS */
-
-.footer-link-divs2 {
-  width: 46%;
-}
-
-@media (min-width:768px) {
-  .footer-link-divs2 {
-    width: 22%;
-  }
-}
-
-@media (min-width:1024px) {
-
-  .footer-link-divs-lg-2 {
-    width: auto;
-  }
-
-  .footer-link-divs-lg-1 {
-    width: 20%;
-  }
-}
-
-.blogs-container {
-  /* font-family: source-serif-pro, Georgia, Cambria, "Times New Roman", Times, serif; */
-  color: rgba(41, 41, 41, 1);
-}
-
-.blogs-container h1 {
-  font-size: 1.6rem;
-}
-
-.blogs-container h2 {
-  font-size: 1.4rem;
-}
-
-.blogs-container h3 {
-  font-size: 1.2rem;
-}
-
-.blogs-container p {
-}
-
-.blogs-container iframe {
-  min-height: 300px;
-}
-
-.blogs-container img,
-.blogs-container iframe {
-  width: 100%;
-  margin: auto;
-}
-
-@media (min-width:1000px) {
-
-  .blogs-container img,
-  .blogs-container iframe {
-    width: 60%;
-    margin: auto;
-  }
-}
-
-
-.blogs-container figcaption {
-  margin: auto;
-  text-align: center;
-}
-
-.blogs-container ol,
-.blogs-container ul,
-.blogs-container menu {
-  list-style: disc;
-  margin-top: 10px;
-  padding-left: 20px;
-}
-
-.blogs-container h1,
-.blogs-container h2,
-.blogs-container h3,
-.blogs-container h4,
-.blogs-container h5,
-.blogs-container h6,
-.blogs-container hr,
-.blogs-container figure,
-.blogs-container p,
-.blogs-container pre {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.admission-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-}
-
-.admission-container>div {
-  flex: 100%;
-}
-
-@media (min-width:600px) {
-  .admission-container>div {
-    flex: 45%;
-  }
-}
-
-.admission-form-label {
-  /* font-weight: bold; */
-  display: block;
-  font-size: 0.99rem;
-  margin-bottom: 0.5rem;
-  letter-spacing: 0.025em;
-
-  --tw-text-opacity: 1;
-  /* color: rgb(55 65 81 / var(--tw-text-opacity)); */
-  font-weight: bold;
-}
-
-.admission-form-input {
-  background-color: white;
-  appearance: none;
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  border-width: 1px;
-  border-radius: 0.25rem;
-  border-radius: 0.25rem;
-  padding: 0.5rem 0.75rem;
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-  line-height: 1.25;
-  width: 100%;
-}
-
-.form p {
-  color: red;
-  font-size:0.8rem;
-}
-
-.form p::before {
-  content: "⚠ ";
-}
-
-.error-msg--small {
-  font-size: 0.8rem;
-  margin-top: 0.4rem;
-}
-
-.about-us a {
-  color: blue;
-}
-
-.about-us a:active {
-  color: purple;
-}
-
-#scroll-to-top {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  z-index: 500;
-  width: 40px;
-  height: 40px;
-  color: white;
-  fill: currentColor;
-  border-radius: 100%;
-  box-shadow: 0px 0px 5px 2px rgba(208, 208, 208, 0.12);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer
-}
-
-#scroll-to-top svg {
-  width: 20px;
-}
-
-.mission {
-  color: #018544;
-}
-
-.training-banner .training-banner-img {
-  overflow: hidden;
-  transition: transform 0.2s ease;
 
 }
 
-.training-banner {
-  overflow: hidden;
-  transform: scale(1);
-  transition: transform 0.2s ease;
-
+.testimonial-card-clamp {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
-.training-banner:hover .training-banner-img {
-  transform: scale(1.04);
+.clamp-4 {
+    -webkit-line-clamp: 4;
 }
 
-.progress-bar {
-  transition: width 2s;
+.clamp-5 {
+    -webkit-line-clamp: 5;
 }
 
-.required-field::after {
-  content: " * ";
-  color: red;
+.clamp-6 {
+    -webkit-line-clamp: 6;
 }
 
-.about-us__banner {
-  background-image: url("../assets/homePage/matrix.jpg");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  border-radius: 5px;
-}
-
-#course_overview ul {
-  padding: revert;
-  list-style-type: disc;
-}
-
-.admission-modal {
-  display: none;
-}
-
-.admission-modal.active {
-  display: flex;
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  z-index: 1050;
-}
-
-.overview__wrapper {
-  height: auto;
-  transition: height 5s cubic-bezier(1, -1.14, 1, 1);
-}
-
-.overview__wrapper.limited {
-  height: 500px;
-  overflow: hidden;
+.clamp-7 {
+    -webkit-line-clamp: 7;
 }
 
 
-.overview__wrapper.limited .fader {
-  bottom: 0;
-  height: 8rem;
-  left: 0;
-  right: 0;
-  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
-}
-
-.accordion-tab-content ul {
-  list-style-type: disc !important;
-  list-style-position: outside !important;
-  padding-left: 2rem;
-}
-
-.testimonial-card-clamp-4 {
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 4;
-  overflow: hidden;
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-
-/* For WebKit-based browsers */
+/* TODO: scrollbar is not changing .. change its desing */
 .testimonial-card-clamp-4::-webkit-scrollbar {
-  width: 2px;
-  /* set the width of the scrollbar */
+    width: 6px;
+    /* Set the width of the scrollbar */
 }
 
-/* For the track of the scrollbar */
 .testimonial-card-clamp-4::-webkit-scrollbar-track {
-  background-color: #f1f1f1;
-  /* set the background color of the track */
+    background-color: #f1f1f1;
+    /* Set the background color of the track */
+    border-radius: 10px;
+    /* Set the border radius of the track */
 }
 
-/* For the thumb of the scrollbar */
 .testimonial-card-clamp-4::-webkit-scrollbar-thumb {
-  background-color: #888;
-  /* set the background color of the thumb */
-  border-radius: 5px;
-  /* round the corners of the thumb */
+    background-color: #888;
+    /* Set the color of the scrollbar thumb */
+    border-radius: 10px;
+    /* Set the border radius of the scrollbar thumb */
+}
+
+.testimonial-card-clamp-4::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+    /* Set the color of the scrollbar thumb on hover */
 }
 
 
-
-/* pagination */
-
-
-
-.paginate-wrapper li[title] {
-  font-size: .8rem;
-  margin-right: .3rem;
-  border-radius: 50%;
-  text-align: center;
-  min-width: 2rem;
-  aspect-ratio: 1/1;
-  user-select: none;
-  display: inline-block;
-  border: 1px solid gray;
-  padding: .3rem;
-  vertical-align: middle;
-  position: relative;
-  cursor: pointer;
+/* for cruved ..arrow in home page */
+.targett::after {
+    position: absolute;
+    content: "";
+    background-image: url("/assets/images/home/banner/curve-stroke.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    right: 20%;
+    bottom: -30px;
+    height: auto;
+    width: auto;
+    height: 812px;
+    width: 1561px;
+    transform: translatey(100%);
+    z-index: -1;
 }
 
-.paginate-wrapper li *{
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%,-50%);
-}
-.paginate-wrapper li:has(button) {
-  margin:0 !important;
-  border:none !important;
-  border-top: 0 !important; 
-  border-bottom: 0 !important;
-  position: relative;
+.custom-swiper-dots .swiper-pagination {
+    bottom: -45px !important;
 }
 
-.paginate-wrapper li:has(button)::after {
-  content: "•••";
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%,-50%);
-}
-
-
-.paginate-wrapper li.disabled,.rc-pagination-disabled {
-  /* background-color: gray; */
-  opacity: .4;
-  cursor: no-drop;
-}
-
-.paginate-wrapper li.disabled *,
-.rc-pagination-disabled {
-  cursor: no-drop;
-}
-
-.paginate-wrapper li.selected ,.rc-pagination-item-active {
-  color: white;
-  background-color: #EEEFFB;
-  background-color: var(--primary-color);
-  border-color: var(--primary-color);
-}
-
-
-.rc-pagination-total-text{
-  font-size: 1rem;
-  margin-bottom: .5rem;
-  margin-top: .5rem;
+@media(min-width:768px){
+    .hide-custom-swiper-dots .swiper-pagination{
+         display: none;
+    }
 }
